--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(sidebar: Html)(content: Html)
 
 <!DOCTYPE html>
 
@@ -10,6 +10,7 @@
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <section class="sidebar">@sidebar</section>
+        <section class="content">@content</section>
     </body>
 </html>
